# aoc-2022

./: .gitignore  README.md  index.html  pyproject.toml  pytest.ini
day_template/: input.txt  main.py
src/day1/: main.html  main.py
src/day15/: main.html  main.py
src/day2/: main.html  main.py
