[tool.poetry]
name = "aoc-2022"
version = "0.1.0"
description = ""
authors = ["Peter Curtis <peter.d.curtis@gmail.com>"]
readme = "README.md"
packages = [{include = "aoc_2022"}]

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.dev.dependencies]
Pycco = "^0.6.0"
pytest = "^7.1.3"
mypy = "^0.982"
black = "^22.8.0"
flake8 = "^5.0.4"
flake8-black = "^0.3.3"
flake8-import-order = "^0.18.1"
nox = "^2022.8.7"
pre-commit = "^2.20.0"
flake8-annotations = "^2.9.1"
xdoctest = "^1.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
